2005-06-23  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkcairo.c (gdk_cairo_set_source_pixbuf): Fix the
	big endian case for 3-channel source. (Reported by
	David Zeuthen)

2005-06-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkbutton.c (gtk_button_construct_child): Don't
	trigger warnings if there are extra references to the
	hbox.  (#308677, Dan Winship)

	* gtk/gtkfilesystemunix.c (bookmark_list_write): Use
	g_file_set_contents().  (#308722, Morten Welinder)

2005-06-22  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkdnd-x11.c (xdnd_finished_filter): Set the
	time field in the event.  (#308573, Morten Welinder)

	* gtk/gtkfilesystemunix.c: Remove gratitious differences
	between the stable branch and HEAD, which sneaked in with
	the bookmark renaming.  

2005-06-22  Kjartan Maraas  <kmaraas@gnome.org>

	* gtk/gtkhsv.c: (gtk_hsv_expose): Don't leak the cairo context
	Closes bug #308581.

2005-06-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkarrow.c:
	* gtk/gtkimage.c:
	* gtk/gtklabel.c:
	* gtk/gtkpixmap.c: Modify all of the GtkMisc widgets to round down
	on centering calculations to match the behaviour of other parts
	of GTK+. (#307419, Ryan Lortie)

2005-06-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_source_set): Connect to 
	button-release-event as well, to handle touchscreen 
	scenarios better.  (#171490, Markku Vire)

	* gtk/*.h: Trivial cleanups. (#169647, #303455, 
	Fabricio Barros Cabral, Benoit Carpentier)

	* gdk/gdk.symbols: 
	* gdk/gdkwindow.h: 
	* gdk/x11/gdkgeometry-x11.c (gdk_window_move_region): New
	function which can be used to implement scrolling in 
	non-window widgets.  (#135165, Søren Sandmann)

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconcache.c: Handle MAP_FAILED.  (#308449, Georg
	Schwarz)

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version number.

	* === Released 2.7.0 ===

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols: